# Constrain

./: CONTRIBUTING.md  Dockerfile  README.md  README_en.md  README_zh.md  app.py  docker-compose.yml  pyproject.toml
adapters/: postgres.py  rabbitmq.py  redis.py
agent/: __init__.py  base.py  registry.py
cli/: main.py  templates.py
cli/commands/: init_cmd.py  list_cmd.py  new_cmd.py  run_cmd.py
config/: production.yaml
core/arbiter/: __init__.py  arbiter.py  models.py  policies.py
core/commander/: __init__.py  engine.py  models.py  scheduler.py
core/event_bus/: __init__.py  base.py  models.py
core/event_bus/backends/: __init__.py  memory.py  rabbitmq.py  redis_pubsub.py
core/gate/: __init__.py  models.py  pipeline.py
core/harness/: __init__.py  config.py  harness.py  middleware.py
core/state_machine/: __init__.py  machine.py  models.py
core/tracing/: __init__.py  context.py  exporters.py  tracer.py
docs/requirements/: 0-overview.md  1.1-commander.md  1.2-arbiter.md  1.3-state-machine.md  1.4-event-bus.md  1.5-gate-evaluator.md  1.6-tracing.md  1.7-harness.md  2-agent-skill.md
examples/hello-world/: main.py
skill/: __init__.py  base.py  decorators.py  registry.py
skills/: README.md
test-project/: constrain.yaml
test-project/skills/: __init__.py
tests/: test_arbiter.py  test_commander.py  test_event_bus.py  test_gate.py  test_skill.py  test_state_machine.py  test_tracing.py
workflows/: hello_world.yaml
